# mlx-dashboard

./: .gitignore  Makefile  README.md  pyproject.toml
app/: config.py  main.py
app/models/: schemas.py
app/routers/: benchmark.py  evaluate.py  models.py  scoring.py
app/services/: auto_scorer.py  benchmark_service.py  evaluation_service.py  mlx_client.py  scoring_service.py  system_monitor.py
static/: index.html
static/css/: style.css
static/js/: api.js  app.js  benchmark.js  charts.js  evaluate.js  scoring.js
