[project]
name = "mlx-dashboard"
version = "0.1.0"
description = "MLX-LM model comparison dashboard with benchmarks, evaluation, and AI auto-scoring"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "psutil>=6.0.0",
    "pydantic>=2.10.0",
    "mlx-lm>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
